[package]
name = "deps"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = { version = "0.14.1", default-features = false, features = ["derive"] }
pbs = { git = "https://github.com/mark-ahn/pbs", version = "0.1.2", features = [
    "pub-deps",
] }
anyhow = { version = "1.0.99", default-features = false }
tracing = { version = "0.1.41", default-features = false }

pbjson = { version = "0.8.0", optional = true }

serde = { version = "1.0.219", default-features = false, features = [
    "derive",
], optional = true }


[build-dependencies]
prost-build = "0.14.1"
pbjson-build = "0.8.0"
glob = "0.3.3"

[dev-dependencies]
serde_json = "1.0.143"
test-log = { version = "0.2.18", default-features = false, features = [
    "color",
    "trace",
] }
tracing = { version = "0.1.41", default-features = false }


[features]
std = []

serde-json = ["dep:pbjson", "dep:serde", "std", "pbs/serde-json"]
mqtt-server = ["mqtt-deps"]
mqtt-client = ["mqtt-deps"]
mqtt-deps = ["std"]
tracing-log = []
pub-deps = []
